Fix result list scrolling
Accidentally broken in the last commit when removing some extraneous
containers.

--- a/resources/assets/sass/results.scss
+++ b/resources/assets/sass/results.scss
@@ -4,6 +4,8 @@
     ul {
         list-style-type: none;
         margin: 0; padding: 0;
+        overflow-y: auto;
+        max-height: 100%;
     }
 }
 
